# enzo-tech-device-login

./: .clang-format  .gitignore  .gitmodules  AsyncTaskWithDialog.h  CAuthProgressDlg.cpp  CAuthProgressDlg.h  CCustomClock.cpp  CCustomClock.h  CCustomEdit.cpp  CCustomEdit.h  CLoginDialog.cpp  CLoginDialog.h  CLogoButton.cpp  CLogoButton.h  CMakeLists.txt  CScalableBitmapStatic.cpp  CScalableBitmapStatic.h  CTaskProgressDlg.cpp  CTaskProgressDlg.h  Communicator.cpp  Communicator.h  Definitions.h  MessageBoxCustomizer.cpp  MessageBoxCustomizer.h  README.md  Settings.h  Uuid.cpp  enzo-tech-device-login.cpp  enzo-tech-device-login.h  enzo-tech-device-login.sln  enzo-tech-device-login.vcxproj  enzo-tech-device-login.vcxproj.filters  enzo-tech-device-loginDlg.cpp  enzo-tech-device-loginDlg.h  enzotechdevicelogin.aps  enzotechdevicelogin.rc  extra-version-to-iss.ps1  framework.h  resource.h  settings.ini  (+3 more)
.github/workflows/: msbuild.yml
Timekeeping Badger/: Timekeeping Badger.vdproj
res/: enzotechdevicelogin.rc2
x64/Release/: Enzo Tech Timekeeping Badge Script.iss
